--- a/app/src/main/assets/latex.html
+++ b/app/src/main/assets/latex.html
@@ -6,11 +6,41 @@
     <title>LaTeX</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css" integrity="sha384-wcIxkf4k558AjM3Yz3BBFQUbk/zgIYC2R0QpeeYb+TwlBVMrlgLqwRjRtGZiK7ww" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.js" integrity="sha384-hIoBPJpTUs74ddyc4bFZSM1TVlQDA60VBbJS0oA934VSz82sBx1X7kSx2ATBDIyd" crossorigin="anonymous"></script>
+
+    <style>
+        [data-theme=light] {
+            --fg-color: 0xFF1C1B1F;
+        }
+
+        [data-theme=dark] {
+            --fg-color: white;
+        }
+
+        body {
+            color: var(--fg-color);
+        }
+
+        .math-block {
+            text-align: center;
+            font-size: 18px;
+            padding: 0px;
+            margin: 0px;
+        }
+    </style>
 </head>
 <body>
-    <p id="math-element" style="text-align: center; font-size: 18px; padding: 0px; margin: 0px;"></p>
+    <p id="math-element" class="math-block"></p>
     <script>
-        document.getElementById("math-element").innerText = katex
+        let body = document.body;
+        let mathElement = document.getElementById("math-element");
+
+        if (Android.isDark()) {
+            body.setAttribute("data-theme", "dark");
+        } else {
+            body.setAttribute("data-theme", "light");
+        }
+
+        mathElement.innerText = katex
         katex.render(Android.getFormula(), document.getElementById("math-element"), {throwOnError: false});
     </script>
 </body>
