Finish implementing task creator

--- a/app/src/main/assets/editorjs.html
+++ b/app/src/main/assets/editorjs.html
@@ -18,6 +18,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdgaziur/EditorJS-LaTeX@latest/dist/editorjs-latex.bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/katex.min.css"></link>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
     <style>
         [data-theme=light] {
             --fg-color: #0x1C1B1F;
@@ -34,6 +38,7 @@
 
         body {
             color: var(--fg-color);
+            font-family: "Nunito", sans-serif;
         }
 
         .ce-toolbar__plus,
