--- a/app/src/main/assets/editorjs.html
+++ b/app/src/main/assets/editorjs.html
@@ -86,7 +86,7 @@
                     inlineToolbar: true
                 },
                 list: {
-                    class: List,
+                    class: EditorjsList,
                     inlineToolbar: true
                 },
                 delimiter: {
